apps/media/sabnzbd/service.yaml
---
# Source: sabnzbd/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
---
