apps/media/sabnzbd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: sabnzbd
          port: http
      middlewares:
        - name: authentik-forward-auth
    - match: Host(`sabnzbd.home.8none1.com`) && PathPrefix(`/sabnzbd/api/`)
      kind: Rule
      services:
        - name: sabnzbd
          port: http
  tls:
    secretName: sabnzbd-ingress-tls
---
